include/pinbridge/pinbridge.h

typedef int32_t PbStatus;
typedef int32_t PbTri;
typedef struct PbInsHandle
{
    int32_t opaque;
} PbInsHandle;
typedef struct PbCallbackHandle
{
    uint64_t opaque;
} PbCallbackHandle;
typedef struct PbContextOpaque* PbContextHandle;
typedef struct PbPinConfigurationOpaque* PbPinConfigurationHandle;
typedef struct PbXedDecodedInstOpaque* PbXedDecodedInstHandle;
typedef uint32_t PbRegId;
typedef uint32_t PbSmcMode;
typedef uint32_t PbSymbolInfoMode;
typedef uint32_t PbIpoint;
typedef uint32_t PbBufferId;
typedef uint32_t PbPredicate;
typedef uint32_t PbXedRegId;
typedef void(PB_CALL* PbInsInstrumentCallback)(PbInsHandle ins, void* user_data);
typedef void(PB_CALL* PbInsAnalysisCallback)(void* user_data);
typedef void(PB_CALL* PbInsContextAnalysisCallback)(
    PbContextHandle context, void* user_data);
typedef uint64_t(PB_CALL* PbInsPredicateCallback)(void* user_data);
PB_API PbStatus PB_CALL pb_reformat(
    const char* text, const char* prefix, uint32_t min_line, uint32_t max_line,
    char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_string_bignum(
    int64_t value, uint32_t digits, char padding,
    char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_string_bool(
    uint8_t value, char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_string_dec(
    uint64_t value, uint32_t digits, char padding,
    char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_string_dec_signed(
    int64_t value, uint32_t digits, char padding,
    char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_string_flt(
    double value, uint32_t precision, uint32_t width,
    char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_string_from_addrint(
    uint64_t value, char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_string_from_uint64(
    uint64_t value, char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_string_hex(
    uint32_t value, uint32_t digits, uint8_t prefix_0x,
    char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_string_hex32(
    uint32_t value, uint32_t digits, uint8_t prefix_0x,
    char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_string_tri(
    PbTri value, char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_left_justify(
    const char* text, uint32_t width, char padding,
    char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_pointer_string(
    const void* pointer, char* buffer, uint64_t capacity,
    uint64_t* required_size);
PB_API PbStatus PB_CALL pb_decstr_i16(
    int16_t value, uint32_t width,
    char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_decstr_i32(
    int32_t value, uint32_t width,
    char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_decstr_i64(
    int64_t value, uint32_t width,
    char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_decstr_u16(
    uint16_t value, uint32_t width,
    char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_decstr_u32(
    uint32_t value, uint32_t width,
    char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_decstr_u64(
    uint64_t value, uint32_t width,
    char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_fltstr(
    double value, uint32_t precision, uint32_t width,
    char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_hexstr_i16(
    int16_t value, uint32_t width,
    char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_hexstr_i32(
    int32_t value, uint32_t width,
    char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_hexstr_i64(
    int64_t value, uint32_t width,
    char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_hexstr_u16(
    uint16_t value, uint32_t width,
    char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_hexstr_u32(
    uint32_t value, uint32_t width,
    char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_hexstr_u64(
    uint64_t value, uint32_t width,
    char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_hexstr_pointer(
    void* pointer, uint32_t width,
    char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_hexstr_const_pointer(
    const void* pointer, uint32_t width,
    char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_pin_version(char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_pin_init(int32_t argc, char** argv);
PB_API PB_NORETURN void PB_CALL pb_pin_start_program_default(void);
PB_API PB_NORETURN void PB_CALL pb_pin_start_program_configured(
    PbPinConfigurationHandle configuration);
PB_API PbStatus PB_CALL pb_pin_init_symbols(void);
PB_API PbStatus PB_CALL pb_pin_init_symbols_alt(
    PbSymbolInfoMode mode, uint8_t* out_success);
PB_API PbStatus PB_CALL pb_pin_lock_client(void);
PB_API PbStatus PB_CALL pb_pin_unlock_client(void);
PB_API PbStatus PB_CALL pb_pin_set_smc_support(PbSmcMode mode);
PB_API PbStatus PB_CALL pb_pin_create_default_configuration_info(
    PbPinConfigurationHandle* out_configuration);
PB_API PB_NORETURN void PB_CALL pb_pin_start_program_probed(void);
PB_API PbStatus PB_CALL pb_pin_remove_fini_functions(void);
PB_API PbStatus PB_CALL pb_pin_remove_instrumentation(void);
PB_API PbStatus PB_CALL pb_pin_remove_instrumentation_in_range(
    uint64_t start, uint64_t end);
PB_API PbStatus PB_CALL pb_ins_add_instrument_function(
    PbInsInstrumentCallback callback,
    void* user_data,
    PbCallbackHandle* out_callback);
PB_API PbStatus PB_CALL pb_ins_insert_call_before(
    PbInsHandle ins, PbInsAnalysisCallback callback, void* user_data);
PB_API PbStatus PB_CALL pb_ins_insert_call_before_ctx(
    PbInsHandle ins, PbInsContextAnalysisCallback callback, void* user_data);
PB_API PbStatus PB_CALL pb_ins_insert_if_call_before(
    PbInsHandle ins, PbInsPredicateCallback callback, void* user_data);
PB_API PbStatus PB_CALL pb_ins_insert_then_call_before(
    PbInsHandle ins, PbInsAnalysisCallback callback, void* user_data);
PB_API PbStatus PB_CALL pb_ins_insert_predicated_call_before(
    PbInsHandle ins, PbInsAnalysisCallback callback, void* user_data);
PB_API PbStatus PB_CALL pb_ins_insert_if_predicated_call_before(
    PbInsHandle ins, PbInsPredicateCallback callback, void* user_data);
PB_API PbStatus PB_CALL pb_ins_insert_then_predicated_call_before(
    PbInsHandle ins, PbInsAnalysisCallback callback, void* user_data);
PB_API PbStatus PB_CALL pb_ins_insert_fill_buffer(
    PbInsHandle ins, PbIpoint ipoint, PbBufferId id, uint32_t field_offset);
PB_API PbStatus PB_CALL pb_ins_insert_fill_buffer_predicated(
    PbInsHandle ins, PbIpoint ipoint, PbBufferId id, uint32_t field_offset);
PB_API PbStatus PB_CALL pb_ins_insert_fill_buffer_then(
    PbInsHandle ins, PbIpoint ipoint, PbBufferId id, uint32_t field_offset);
typedef void (PB_CALL* PbInsCaptureRegsCallback)(
    uint64_t address, uint32_t thread_id,
    uint64_t rcx, uint64_t rdx, uint64_t r8, uint64_t r9, void* user_data);
typedef void (PB_CALL* PbInsContextCaptureRegsCallback)(
    uint64_t address, uint32_t thread_id, PbContextHandle context,
    uint64_t rcx, uint64_t rdx, uint64_t r8, uint64_t r9, void* user_data);
typedef void (PB_CALL* PbInsMemoryOperandCallback)(
    uint64_t instruction_address, uint32_t thread_id,
    uint64_t memory_address, uint32_t size, uint32_t access, void* user_data);
typedef uint64_t (PB_CALL* PbInsMemoryTranslateCallback)(
    uint64_t instruction_address, uint32_t thread_id,
    uint64_t memory_address, uint32_t size, uint32_t memory_operation,
    void* user_data);
typedef void (PB_CALL* PbInsExecCallback)(
    uint64_t address, uint32_t thread_id, uint32_t size, void* user_data);
typedef void (PB_CALL* PbInsBranchEdgeCallback)(
    uint64_t address, uint32_t thread_id,
    uint64_t target_address, uint64_t taken, void* user_data);
PB_API PbStatus PB_CALL pb_ins_insert_capture_regs(
    PbInsHandle ins, PbInsCaptureRegsCallback callback, void* user_data);
PB_API PbStatus PB_CALL pb_ins_insert_capture_regs_ctx(
    PbInsHandle ins, PbInsContextCaptureRegsCallback callback, void* user_data);
PB_API PbStatus PB_CALL pb_ins_insert_memory_operands(
    PbInsHandle ins, PbInsMemoryOperandCallback callback, void* user_data);
PB_API PbStatus PB_CALL pb_ins_insert_memory_address_translation(
    PbInsHandle ins, PbInsMemoryTranslateCallback callback, void* user_data,
    PbRegId scratch_reg0, PbRegId scratch_reg1);
PB_API PbStatus PB_CALL pb_ins_insert_exec(
    PbInsHandle ins, PbInsExecCallback callback, void* user_data);
PB_API PbStatus PB_CALL pb_ins_insert_branch_edge(
    PbInsHandle ins, PbInsBranchEdgeCallback callback, void* user_data);
typedef void (PB_CALL* PbInsExecBytesCallback)(
    uint64_t address, uint32_t thread_id, uint32_t size,
    uint64_t bytes_lo, uint64_t bytes_hi, void* user_data);
typedef void (PB_CALL* PbInsMemoryOperandValueCallback)(
    uint64_t instruction_address, uint32_t thread_id,
    uint64_t memory_address, uint32_t size, uint32_t access,
    uint64_t value, void* user_data);
PB_API PbStatus PB_CALL pb_ins_insert_capture_exec_bytes(
    PbInsHandle ins, PbInsExecBytesCallback callback, void* user_data);
PB_API PbStatus PB_CALL pb_ins_insert_memory_operands_values(
    PbInsHandle ins, PbInsMemoryOperandValueCallback callback, void* user_data);
typedef struct PbDisasmInsn
{
    uint64_t address;
    uint32_t size;
    uint32_t kind; 
    char text[64];
} PbDisasmInsn;
PB_API PbStatus PB_CALL pb_disassemble(
    const uint8_t* bytes, uint64_t size, uint64_t address,
    PbDisasmInsn* out, uint64_t capacity, uint64_t* out_count);
typedef struct PbFlowInsn
{
    uint64_t address;
    uint32_t size;
    uint32_t kind;       
    uint8_t conditional; 
    uint8_t has_target;  
    uint8_t ind_reg;     
    uint8_t ind_mem;     
    int32_t base_reg;    
    int32_t index_reg;   
    uint64_t scale;
    int64_t disp;
    uint64_t target;     
} PbFlowInsn;
PB_API PbStatus PB_CALL pb_disassemble_flow(
    const uint8_t* bytes, uint64_t size, uint64_t address, PbFlowInsn* out);
PB_API PbStatus PB_CALL pb_category_string_short(
    uint32_t category, char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_extension_string_short(
    uint32_t extension, char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_opcode_string_short(
    uint32_t opcode, char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_ins_disassemble(
    PbInsHandle ins, char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_ins_mnemonic(
    PbInsHandle ins, char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_ins_get_number_and_size_of_mem_accesses(
    PbInsHandle ins, int32_t* out_num_accesses, int32_t* out_access_size,
    int32_t* out_index_size);
PB_API PbStatus PB_CALL pb_ins_change_reg(
    PbInsHandle ins, PbRegId old_reg, PbRegId new_reg, uint8_t as_read,
    uint8_t* out_changed);
PB_API PbStatus PB_CALL pb_ins_get_far_pointer(
    PbInsHandle ins, uint16_t* out_segment_selector, uint32_t* out_displacement);
PB_API PbStatus PB_CALL pb_ins_invalid(PbInsHandle* out_ins);
PB_API PbStatus PB_CALL pb_ins_xed_dec(
    PbInsHandle ins, PbXedDecodedInstHandle* out_decoded_instruction);
PB_API PbStatus PB_CALL pb_ins_xed_exact_map_from_pin_reg(
    PbRegId pin_reg, PbXedRegId* out_xed_reg);
PB_API PbStatus PB_CALL pb_ins_xed_exact_map_to_pin_reg(
    PbXedRegId xed_reg, PbRegId* out_pin_reg);
PB_API PbStatus PB_CALL pb_ins_xed_exact_map_to_pin_reg_legacy(
    uint32_t xed_reg, PbRegId* out_pin_reg);
PB_API PbStatus PB_CALL pb_pin_set_syntax_att(void);
PB_API PbStatus PB_CALL pb_pin_set_syntax_intel(void);
PB_API PbStatus PB_CALL pb_pin_set_syntax_xed(void);