bindings/rust/pinbridge-sys/src/bindings.rs

    pub fn pb_reformat(text: *const c_char, prefix: *const c_char, min_line: u32, max_line: u32, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_string_bignum(value: i64, digits: u32, padding: c_char, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_string_bool(value: u8, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_string_dec(value: u64, digits: u32, padding: c_char, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_string_dec_signed(value: i64, digits: u32, padding: c_char, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_string_flt(value: f64, precision: u32, width: u32, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_string_from_addrint(value: u64, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_string_from_uint64(value: u64, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_string_hex(value: u32, digits: u32, prefix_0x: u8, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_string_hex32(value: u32, digits: u32, prefix_0x: u8, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_string_tri(value: PbTri, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_left_justify(text: *const c_char, width: u32, padding: c_char, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_pointer_string(pointer: *const c_void, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_decstr_i16(value: i16, width: u32, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_decstr_i32(value: i32, width: u32, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_decstr_i64(value: i64, width: u32, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_decstr_u16(value: u16, width: u32, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_decstr_u32(value: u32, width: u32, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_decstr_u64(value: u64, width: u32, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_fltstr(value: f64, precision: u32, width: u32, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_hexstr_i16(value: i16, width: u32, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_hexstr_i32(value: i32, width: u32, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_hexstr_i64(value: i64, width: u32, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_hexstr_u16(value: u16, width: u32, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_hexstr_u32(value: u32, width: u32, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_hexstr_u64(value: u64, width: u32, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_hexstr_pointer(pointer: *mut c_void, width: u32, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_hexstr_const_pointer(pointer: *const c_void, width: u32, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_pin_version(buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_pin_init(argc: i32, argv: *mut *mut c_char) -> PbStatus;
    pub fn pb_pin_start_program_default() -> !;
    pub fn pb_pin_start_program_configured(configuration: PbPinConfigurationHandle) -> !;
    pub fn pb_pin_init_symbols() -> PbStatus;
    pub fn pb_pin_init_symbols_alt(mode: PbSymbolInfoMode, out_success: *mut u8) -> PbStatus;
    pub fn pb_pin_lock_client() -> PbStatus;
    pub fn pb_pin_unlock_client() -> PbStatus;
    pub fn pb_pin_set_smc_support(mode: PbSmcMode) -> PbStatus;
    pub fn pb_pin_create_default_configuration_info(out_configuration: *mut PbPinConfigurationHandle) -> PbStatus;
    pub fn pb_pin_start_program_probed() -> !;
    pub fn pb_pin_remove_fini_functions() -> PbStatus;
    pub fn pb_pin_remove_instrumentation() -> PbStatus;
    pub fn pb_pin_remove_instrumentation_in_range(start: u64, end: u64) -> PbStatus;
    pub fn pb_ins_add_instrument_function(callback: PbInsInstrumentCallback, user_data: *mut c_void, out_callback: *mut PbCallbackHandle) -> PbStatus;
    pub fn pb_ins_insert_call_before(ins: PbInsHandle, callback: PbInsAnalysisCallback, user_data: *mut c_void) -> PbStatus;
    pub fn pb_ins_insert_call_before_ctx(ins: PbInsHandle, callback: PbInsContextAnalysisCallback, user_data: *mut c_void) -> PbStatus;
    pub fn pb_ins_insert_if_call_before(ins: PbInsHandle, callback: PbInsPredicateCallback, user_data: *mut c_void) -> PbStatus;
    pub fn pb_ins_insert_then_call_before(ins: PbInsHandle, callback: PbInsAnalysisCallback, user_data: *mut c_void) -> PbStatus;
    pub fn pb_ins_insert_predicated_call_before(ins: PbInsHandle, callback: PbInsAnalysisCallback, user_data: *mut c_void) -> PbStatus;
    pub fn pb_ins_insert_if_predicated_call_before(ins: PbInsHandle, callback: PbInsPredicateCallback, user_data: *mut c_void) -> PbStatus;
    pub fn pb_ins_insert_then_predicated_call_before(ins: PbInsHandle, callback: PbInsAnalysisCallback, user_data: *mut c_void) -> PbStatus;
    pub fn pb_ins_insert_fill_buffer(ins: PbInsHandle, ipoint: PbIpoint, id: PbBufferId, field_offset: u32) -> PbStatus;
    pub fn pb_ins_insert_fill_buffer_predicated(ins: PbInsHandle, ipoint: PbIpoint, id: PbBufferId, field_offset: u32) -> PbStatus;
    pub fn pb_ins_insert_fill_buffer_then(ins: PbInsHandle, ipoint: PbIpoint, id: PbBufferId, field_offset: u32) -> PbStatus;
    pub fn pb_ins_insert_capture_regs(ins: PbInsHandle, callback: PbInsCaptureRegsCallback, user_data: *mut c_void) -> PbStatus;
    pub fn pb_ins_insert_capture_regs_ctx(ins: PbInsHandle, callback: PbInsContextCaptureRegsCallback, user_data: *mut c_void) -> PbStatus;
    pub fn pb_ins_insert_memory_operands(ins: PbInsHandle, callback: PbInsMemoryOperandCallback, user_data: *mut c_void) -> PbStatus;
    pub fn pb_ins_insert_memory_address_translation(ins: PbInsHandle, callback: PbInsMemoryTranslateCallback, user_data: *mut c_void, scratch_reg0: PbRegId, scratch_reg1: PbRegId) -> PbStatus;
    pub fn pb_ins_insert_exec(ins: PbInsHandle, callback: PbInsExecCallback, user_data: *mut c_void) -> PbStatus;
    pub fn pb_ins_insert_branch_edge(ins: PbInsHandle, callback: PbInsBranchEdgeCallback, user_data: *mut c_void) -> PbStatus;
    pub fn pb_ins_insert_capture_exec_bytes(ins: PbInsHandle, callback: PbInsExecBytesCallback, user_data: *mut c_void) -> PbStatus;
    pub fn pb_ins_insert_memory_operands_values(ins: PbInsHandle, callback: PbInsMemoryOperandValueCallback, user_data: *mut c_void) -> PbStatus;
    pub fn pb_disassemble(bytes: *const u8, size: u64, address: u64, out: *mut PbDisasmInsn, capacity: u64, out_count: *mut u64) -> PbStatus;
    pub fn pb_disassemble_flow(bytes: *const u8, size: u64, address: u64, out: *mut PbFlowInsn) -> PbStatus;
    pub fn pb_category_string_short(category: u32, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_extension_string_short(extension: u32, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_opcode_string_short(opcode: u32, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_ins_disassemble(ins: PbInsHandle, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_ins_mnemonic(ins: PbInsHandle, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_ins_get_number_and_size_of_mem_accesses(ins: PbInsHandle, out_num_accesses: *mut i32, out_access_size: *mut i32, out_index_size: *mut i32) -> PbStatus;
    pub fn pb_ins_change_reg(ins: PbInsHandle, old_reg: PbRegId, new_reg: PbRegId, as_read: u8, out_changed: *mut u8) -> PbStatus;
    pub fn pb_ins_get_far_pointer(ins: PbInsHandle, out_segment_selector: *mut u16, out_displacement: *mut u32) -> PbStatus;
    pub fn pb_ins_invalid(out_ins: *mut PbInsHandle) -> PbStatus;
    pub fn pb_ins_xed_dec(ins: PbInsHandle, out_decoded_instruction: *mut PbXedDecodedInstHandle) -> PbStatus;
    pub fn pb_ins_xed_exact_map_from_pin_reg(pin_reg: PbRegId, out_xed_reg: *mut PbXedRegId) -> PbStatus;
    pub fn pb_ins_xed_exact_map_to_pin_reg(xed_reg: PbXedRegId, out_pin_reg: *mut PbRegId) -> PbStatus;
    pub fn pb_ins_xed_exact_map_to_pin_reg_legacy(xed_reg: u32, out_pin_reg: *mut PbRegId) -> PbStatus;
    pub fn pb_pin_set_syntax_att() -> PbStatus;
    pub fn pb_pin_set_syntax_intel() -> PbStatus;
    pub fn pb_pin_set_syntax_xed() -> PbStatus;
    pub fn pb_ins_address(ins: PbInsHandle, out_value: *mut u64) -> PbStatus;
    pub fn pb_ins_address_size_prefix(ins: PbInsHandle, out_value: *mut u8) -> PbStatus;
    pub fn pb_ins_branch_not_taken_prefix(ins: PbInsHandle, out_value: *mut u8) -> PbStatus;
    pub fn pb_ins_branch_taken_prefix(ins: PbInsHandle, out_value: *mut u8) -> PbStatus;
    pub fn pb_ins_category(ins: PbInsHandle, out_value: *mut i32) -> PbStatus;
    pub fn pb_ins_direct_branch_or_call_target_address(ins: PbInsHandle, out_value: *mut u64) -> PbStatus;
    pub fn pb_ins_direct_control_flow_target_address(ins: PbInsHandle, out_value: *mut u64) -> PbStatus;
    pub fn pb_ins_effective_address_width(ins: PbInsHandle, out_value: *mut u32) -> PbStatus;
    pub fn pb_ins_extension(ins: PbInsHandle, out_value: *mut i32) -> PbStatus;
    pub fn pb_ins_full_reg_r_contain(ins: PbInsHandle, argument: PbRegId, out_value: *mut u8) -> PbStatus;
    pub fn pb_ins_full_reg_w_contain(ins: PbInsHandle, argument: PbRegId, out_value: *mut u8) -> PbStatus;
    pub fn pb_ins_get_predicate(ins: PbInsHandle, out_value: *mut PbPredicate) -> PbStatus;
    pub fn pb_ins_has_explicit_memory_reference(ins: PbInsHandle, out_value: *mut u8) -> PbStatus;
    pub fn pb_ins_has_fall_through(ins: PbInsHandle, out_value: *mut u8) -> PbStatus;
    pub fn pb_ins_has_memory_read2(ins: PbInsHandle, out_value: *mut u8) -> PbStatus;
    pub fn pb_ins_has_memory_vector(ins: PbInsHandle, out_value: *mut u8) -> PbStatus;
    pub fn pb_ins_has_real_rep(ins: PbInsHandle, out_value: *mut u8) -> PbStatus;
    pub fn pb_ins_has_scattered_memory_access(ins: PbInsHandle, out_value: *mut u8) -> PbStatus;
    pub fn pb_ins_is_added_for_function_replacement(ins: PbInsHandle, out_value: *mut u8) -> PbStatus;
    pub fn pb_ins_is_amx(ins: PbInsHandle, out_value: *mut u8) -> PbStatus;
    pub fn pb_ins_is_atomic_update(ins: PbInsHandle, out_value: *mut u8) -> PbStatus;
    pub fn pb_ins_is_branch(ins: PbInsHandle, out_value: *mut u8) -> PbStatus;
    pub fn pb_ins_is_branch_or_call(ins: PbInsHandle, out_value: *mut u8) -> PbStatus;
    pub fn pb_ins_is_cache_line_flush(ins: PbInsHandle, out_value: *mut u8) -> PbStatus;
    pub fn pb_ins_is_call(ins: PbInsHandle, out_value: *mut u8) -> PbStatus;
    pub fn pb_ins_is_control_flow(ins: PbInsHandle, out_value: *mut u8) -> PbStatus;
    pub fn pb_ins_is_direct_branch(ins: PbInsHandle, out_value: *mut u8) -> PbStatus;
    pub fn pb_ins_is_direct_branch_or_call(ins: PbInsHandle, out_value: *mut u8) -> PbStatus;
    pub fn pb_ins_is_direct_call(ins: PbInsHandle, out_value: *mut u8) -> PbStatus;
    pub fn pb_ins_is_direct_control_flow(ins: PbInsHandle, out_value: *mut u8) -> PbStatus;
    pub fn pb_ins_is_direct_far_jump(ins: PbInsHandle, out_value: *mut u8) -> PbStatus;
    pub fn pb_ins_is_far_call(ins: PbInsHandle, out_value: *mut u8) -> PbStatus;
